--- a/code/global.less
+++ b/code/global.less
@@ -1,3 +1,108 @@
 html {
-    
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: white;
+}
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Courier New', serif;
+    color: black;
+    min-width: 800px;
+}
+
+.bHeader {
+    height: 72px;
+    border-bottom: 1px solid rgb(229,229,229);
+    background: rgb(241,241,241);
+
+    &__eTitle {
+        line-height: 74px;
+        height: 72px;
+        float: left;
+        margin: 0 0 0 52px;
+        font-size: 30px;
+        font-weight: normal;
+    }
+
+    &__eMenu {
+        text-align: right;
+        line-height: 74px;
+        height: 72px;
+        margin: 0 32px 0 0;
+        font-size: 12px;
+        &Item {
+            color: black;
+            text-decoration: none;
+
+            &__mType_dropdown {
+                padding: 0 11px 0 0;
+                background: url('img/triangle.png') right center no-repeat;
+            }
+        }
+    }
+}
+.bFooter {
+    height: 28px;
+    border-top: 1px solid rgb(229,229,229);
+    background: rgb(241,241,241);
+    font-size: 12px;
+    padding: 0 0 0 52px;
+    line-height: 27px;
+    clear: both;
+}
+.bContent {
+    min-height: 100%;
+    margin-bottom: -29px;
+    &__eMenu {
+        margin: 40px 0 0 52px;
+        &Item {
+            font-size: 14px;
+            line-height: 14px;
+            margin: 0 50px 0 0;
+            &__mState_active {
+                color: black;
+                text-decoration: none;
+                cursor: default;
+            }
+        }
+    }
+
+    &__eForm {
+        float: left;
+        box-sizing: border-box;
+        width: 50%;
+        padding: 20px 5px 20px 44px;
+
+        &MainInput {
+            resize: vertical;
+            width: 100%;
+            box-sizing: border-box;
+            height: 130px;
+        }
+
+        &Hint {
+            font-size: 14px;
+            line-height: 14px;
+            margin: 14px 0 0 8px;
+            color: rgb(88,88,88);
+        }
+    }
+
+    &__eOutput {
+        float: left;
+        box-sizing: border-box;
+        width: 50%;
+        padding: 20px 44px 20px 5px;
+        &Text {
+            width: 100%;
+            min-height: 130px;
+            background: rgb(245, 245, 245);
+            box-sizing: border-box;
+            padding: 20px 40px;
+            font-size: 12px;
+        }
+    }
 }
