Added simple forms and regexp

--- a/code/template.jade
+++ b/code/template.jade
@@ -18,11 +18,11 @@ html
                 a.bContent__eMenuItem.bContent__eMenuItem__mState_active(href="#") Маркер
                 a.bContent__eMenuItem(href="#") Про стоп-слова
                 a.bContent__eMenuItem(href="#") О сервисе
-            form.bContent__eForm
-                textarea.bContent__eFormMainInput
+            form.bContent__eForm#mainForm
+                textarea.bContent__eFormMainInput#mainInput
                 label.bContent__eFormHint Введите или скопируйте текст
             .bContent__eOutput
-                .bContent__eOutputText Вывод
+                .bContent__eOutputText
 
 
         footer.bFooter
