Added words list
Fixed regexp work

--- a/code/global.less
+++ b/code/global.less
@@ -105,6 +105,28 @@ body {
             font-size: 12px;
         }
     }
+
+    &__eTab {
+        display: none;
+        &Text {
+            padding: 30px 52px 52px 52px;
+            font-size: 12px;
+        }
+        &__mState_active {
+            display: block;
+        }
+    }
+
+    &__eWordsList {
+        display: none;
+        padding: 20px 52px;
+        font-size: 12px;
+        line-height: 14px;
+
+        &__mState_open {
+            display: block;
+        }
+    }
 }
 .bStopWord {
     background: yellow;
