--- a/code/template.jade
+++ b/code/template.jade
@@ -25,9 +25,13 @@ html
                     .bContent__eOutputText
 
             .bContent__eTab
-                .bContent__eTabText Про стоп-слова
+                .bContent__eTabText Стоп-слова — это слова, которые нельзя или не рекомендовано использовать
+                    br
+                    | в тексте. Обычно они не несут никакого смысла и служат только балластом.
             .bContent__eTab
-                .bContent__eTabText О сервисе
+                .bContent__eTabText — На этой странице кроме этого текста пока ничего нет.
+                    br
+                    | — Спасибо, кэп!
 
 
         footer.bFooter
