Added Facebook like buttons and favicon

--- a/code/global.less
+++ b/code/global.less
@@ -27,6 +27,13 @@ body {
         font-weight: normal;
     }
 
+    &__eFBLike {
+        float: left;
+        line-height: 90px;
+        padding-left: 26px;
+        height: 72px;
+    }
+
     &__eMenu {
         text-align: right;
         line-height: 74px;
