--- a/code/global.less
+++ b/code/global.less
@@ -59,6 +59,12 @@ body {
     padding: 0 0 0 52px;
     line-height: 27px;
     clear: both;
+    position: relative;
+    &__eMetrika {
+        position: absolute;
+        top: 5px;
+        right: 52px;
+    }
 }
 .bContent {
     min-height: 100%;
