--- a/code/template.jade
+++ b/code/template.jade
@@ -36,7 +36,7 @@ html
             .bContent__eTab
                 .bContent__eTabText Стоп-слова — это слова, которые нельзя или не рекомендовано использовать
                     br
-                    | в тексте. Обычно они не несут никакого смысла и служат только балластом.
+                    | в тексте. Они не несут никакого смысла и служат только балластом.
             .bContent__eTab
                 .bContent__eTabText — На этой странице кроме этого текста пока ничего нет.
                     br
