--- a/code/template.jade
+++ b/code/template.jade
@@ -20,23 +20,29 @@ html
                 .fb-like.bHeader__eFBLike(data-href="https://www.facebook.com/stopslov.net", data-width="450", data-show-faces="false", data-send="false")
                 nav.bHeader__eMenu
                     a.bHeader__eMenuItem.bHeader__eMenuItem__mType_dropdown#listOpener(href="#") Открыть список стоп-слов
+
             .bContent__eWordsList Слова
 
             nav.bContent__eMenu
                 a.bContent__eMenuItem.bContent__eMenuItem__mState_active(href="#") Маркер
                 a.bContent__eMenuItem(href="#") Про стоп-слова
                 a.bContent__eMenuItem(href="#") О сервисе
+
             .bContent__eTab.bContent__eTab__mState_active
-                form.bContent__eForm#mainForm
-                    textarea.bContent__eFormMainInput#mainInput
-                    label.bContent__eFormHint Введите или скопируйте текст
-                .bContent__eOutput
-                    .bContent__eOutputText
+                .bContent__eColumn
+                    form.bContent__eForm#mainForm
+                        textarea.bContent__eFormMainInput#mainInput
+                        label.bContent__eFormHint Введите или скопируйте текст
+
+                .bContent__eColumn
+                    .bContent__eOutput
+                        .bContent__eOutputText
 
             .bContent__eTab
                 .bContent__eTabText Стоп-слова — это слова, которые нельзя или не рекомендовано использовать
                     br
                     | в тексте. Они не несут никакого смысла и служат только балластом.
+
             .bContent__eTab
                 .bContent__eTabText — На этой странице кроме этого текста пока ничего нет.
                     br
