--- a/code/template.jade
+++ b/code/template.jade
@@ -54,6 +54,8 @@ html
             a.bFooter__eLink(href="http://egerev.ru") Кирилл Егерев
             |  |  Реализация: 
             a.bFooter__eLink(href="https://github.com/maikudou") Михаил Лабанов
+            |, 
+            a.bFooter__eLink(href="http://nick-iv.me") Николай Иванушкин
 
             
             // Yandex.Metrika informer
