Добавил описание проекта

--- a/code/global.less
+++ b/code/global.less
@@ -130,6 +130,10 @@ body {
         &Text {
             padding: 30px 52px 52px 52px;
             font-size: 12px;
+            p {
+                margin: 0 0 1em 0;
+                max-width: 800px;
+            }
         }
         &__mState_active {
             display: block;
