--- a/code/template.jade
+++ b/code/template.jade
@@ -44,10 +44,13 @@ html
                     | в тексте. Они не несут никакого смысла и служат только балластом.
 
             .bContent__eTab
-                .bContent__eTabText — На этой странице кроме этого текста пока ничего нет.
-                    br
-                    | — Спасибо, кэп!
-
+                .bContent__eTabText 
+                    p Мы&nbsp;создаем Stopslov.net вовсе не&nbsp;для проверки произведений классиков. Гении высказались, их&nbsp;творения навсегда запечатлены на&nbsp;бумаге и&nbsp;в&nbsp;файлах. Сервис полезен для написания чистых, информативных&nbsp;и, в&nbsp;большинстве своем, коммерческих текстов. Он&nbsp;для новых и&nbsp;еще неопубликованных материалов.
+                    p Маркер, инструмент для выявления словесного мусора, не&nbsp;работает по&nbsp;принципу типографа&nbsp;&mdash; не&nbsp;исправляет ошибки автоматически. С&nbsp;мыслью, которую автор стремится донести до&nbsp;читателей, так нельзя. Стопслов только рекомендует, указывая на&nbsp;возможно допущенные ошибки в&nbsp;тексте. Не&nbsp;в&nbsp;отдельных словах, не&nbsp;опечатки, а&nbsp;именно в&nbsp;тексте, выделяя целые слова и&nbsp;выражения. Оставить или удалить их&nbsp;&mdash; решать автору.
+                    p Стопслов.нет&nbsp;&mdash; сервис для написания чистых черновиков. Заготовок, которые проще окрашивать в&nbsp;нужные тона. Имея чистый черновой материал, в&nbsp;последующей подготовке публикаций не&nbsp;нужно ничего удалять, остается только раскрашивать под принятый в&nbsp;редакции формат. Не&nbsp;замусоренный черновик легче адаптировать под нужды издания или рекламного макета.
+                    p Стопслов помогает создавать интерфейсные тексты. Особенно когда до&nbsp;посетителей важно донести информацию. Без лирики и&nbsp;заискивания.
+                    p Пользуясь сервисом, важно понимать, что он&nbsp;не&nbsp;требует, а&nbsp;только рекомендует. Финальное решение по&nbsp;тексту остается за&nbsp;автором. Хочется добавить в&nbsp;публикацию красок&nbsp;&mdash; сделайте это, но&nbsp;не&nbsp;забудьте обосновать.
+                    p Выделяя слова, маркер ориентируется на&nbsp;список стоп-слов по&nbsp;умолчанию. Сервис гибкий. Стандартный список можно изменить под свои нужды&nbsp;&mdash; удалив лишнее и&nbsp;добавив свое. Пока что списки сохраняются для каждого браузера. Чтобы вернуться к&nbsp;настройкам по&nbsp;умолчанию, нужно очистить кэш браузера. Для большего удобства мы&nbsp;добавим пользовательские профили.
 
         footer.bFooter
             | Идея: 
