--- a/code/template.jade
+++ b/code/template.jade
@@ -25,10 +25,10 @@ html
 
             nav.bContent__eMenu
                 a.bContent__eMenuItem.bContent__eMenuItem__mState_active(href="#") Маркер
-                a.bContent__eMenuItem(href="#") Про стоп-слова
-                a.bContent__eMenuItem(href="#") О сервисе
+                a.bContent__eMenuItem(href="#about/words/") Про стоп-слова
+                a.bContent__eMenuItem(href="#about/service/") О сервисе
 
-            .bContent__eTab.bContent__eTab__mState_active
+            .bContent__eTab.bContent__eTab__mState_active#ssnForm
                 .bContent__eColumn
                     form.bContent__eForm#mainForm
                         textarea.bContent__eFormMainInput#mainInput
@@ -38,12 +38,12 @@ html
                     .bContent__eOutput
                         .bContent__eOutputText
 
-            .bContent__eTab
-                .bContent__eTabText Стоп-слова — это слова, которые нельзя или не рекомендовано использовать
+            .bContent__eTab#aboutWords
+                .bContent__eTabText Стоп-слова &mdash; это слова, которые нельзя или не рекомендовано использовать
                     br
                     | в тексте. Они не несут никакого смысла и служат только балластом.
 
-            .bContent__eTab
+            .bContent__eTab#aboutService
                 .bContent__eTabText 
                     p Мы&nbsp;создаем Stopslov.net вовсе не&nbsp;для проверки произведений классиков. Гении высказались, их&nbsp;творения навсегда запечатлены на&nbsp;бумаге и&nbsp;в&nbsp;файлах. Сервис полезен для написания чистых, информативных&nbsp;и, в&nbsp;большинстве своем, коммерческих текстов. Он&nbsp;для новых и&nbsp;еще неопубликованных материалов.
                     p Маркер, инструмент для выявления словесного мусора, не&nbsp;работает по&nbsp;принципу типографа&nbsp;&mdash; не&nbsp;исправляет ошибки автоматически. С&nbsp;мыслью, которую автор стремится донести до&nbsp;читателей, так нельзя. Стопслов только рекомендует, указывая на&nbsp;возможно допущенные ошибки в&nbsp;тексте. Не&nbsp;в&nbsp;отдельных словах, не&nbsp;опечатки, а&nbsp;именно в&nbsp;тексте, выделяя целые слова и&nbsp;выражения. Оставить или удалить их&nbsp;&mdash; решать автору.
