--- a/code/global.less
+++ b/code/global.less
@@ -29,8 +29,9 @@ body {
 
     &__eFBLike {
         float: left;
-        line-height: 90px;
+        line-height: 20px;
         padding-left: 26px;
+        padding-top: 28px;
         height: 72px;
     }
 
