--- a/code/global.less
+++ b/code/global.less
@@ -109,6 +109,13 @@ body {
             border: 1px solid rgb(169, 169, 169);
             padding: 2px;
             font-size: 14px;
+
+            p {
+                margin: 0 0 1em 0;
+                &:last-child {
+                    margin: 0;
+                }
+            }
         }
 
         &Hint {
@@ -133,7 +140,7 @@ body {
 
     &__eTab {
         display: none;
-        margin: 0 auto;
+        margin: 0 auto 29px auto;
         width: 900px;
         &Text {
             padding: 30px 52px 52px 52px;
